--- a/src/ui/Table/Table.mdx
+++ b/src/ui/Table/Table.mdx
@@ -1,3 +1,11 @@
+{/* Table.mdx */}
+import { Meta } from '@storybook/blocks';
+import * as TableStories from './Table.stories'
+
+{/* Attach this MDX file to the Button component */}
+
+<Meta of={TableStories} />
+
 # Table UI developer guide
 
 Table UI is a styles only "component" that provides the design system aspect of the "head" for our headless table library. Tables should be crafted on each page and configured as needed, as such these styles only apply our system's Table rules and is intensionally lite.
@@ -20,6 +28,7 @@ import 'ui/Table/Table.css'
 ```
 
 You are expected to follow `<table>` best practices when added tables to pages, use of `<caption>`'s, `<tbody>`, `<thead>`, `<tfoot>`, set correct scope attributes,and resolve any warnings in the console. (ex/ no nesting `divs` in `tr`'s)
+
 
 ### How to read the examples
 
